--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         
                         <div class="mt-6 text-center">
                             <p class="text-gray-400 text-sm mb-2">CONTACT</p>
-                            <a href="https://github.com/higuchim/" target="_blank" class="inline-block bg-cyan-500 text-white font-bold py-2 px-6 rounded-lg hover:bg-cyan-600 transition-all duration-300 shadow-md">
+                            <a href="https://x.com/higuchim" target="_blank" class="inline-block bg-cyan-500 text-white font-bold py-2 px-6 rounded-lg hover:bg-cyan-600 transition-all duration-300 shadow-md">
                                 Follow Me Please.
                             </a>
                         </div>
